--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,17 +15,17 @@
             <p>안녕하세요 손님.</p>
         </div>
         <p class="lead">회원 기능</p> <p>
-            <p></p>
+            <p style="color:red;">* 관리자는 hello shop을 통한 회원가입이 필요합니다.</p>
             <a class="btn btn-lg btn-secondary" href="/member/new">회원 가입</a>
             <a class="btn btn-lg btn-secondary" href="/member/login">회원 로그인</a>
-            <a class="btn btn-lg btn-secondary" href="/oauth2/authorization/google">구글 로그인</a>
+            <a class="btn btn-lg btn-secondary" style="background-color:green;" href="/oauth2/authorization/google">구글 로그인</a>
             <a class="btn btn-lg btn-secondary" href="/members">회원 목록</a> </p>
         <p class="lead">상품 기능</p> <p>
-            <a class="btn btn-lg btn-dark" href="/items/new">상품 등록</a>
-            <a class="btn btn-lg btn-dark" href="/items">상품 목록</a> </p>
+            <a class="btn btn-lg btn-dark" href="/">상품 등록</a>
+            <a class="btn btn-lg btn-dark" href="/">상품 목록</a> </p>
         <p class="lead">주문 기능</p> <p>
-            <a class="btn btn-lg btn-info" href="/order">상품 주문</a>
-            <a class="btn btn-lg btn-info" href="/orders">주문 내역</a> </p>
+            <a class="btn btn-lg btn-info" href="/">상품 주문</a>
+            <a class="btn btn-lg btn-info" href="/">주문 내역</a> </p>
     </div>
     <div th:replace="fragments/footer :: footer" />
 </div> <!-- /container -->
