--- a/src/main/resources/templates/member/createMemberForm.html
+++ b/src/main/resources/templates/member/createMemberForm.html
@@ -27,10 +27,11 @@
     </div>
     <div class="form-group">
       <label th:for="role">계정</label>
-      <select class="form-control" th:field="*{role}">
+      <select class="form-control" th:field="*{role}" required>
+        <option value="" selected>계정을 선택하세요</option>
         <option th:each="roleValue : ${T(weblogin.oauth2.domain.MemberRole).values()}"
                 th:value="${roleValue}"
-                th:text="${roleValue.getTitle()}" placeholder="계정을 선택하세요"></option>
+                th:text="${roleValue.getTitle()}"></option>
       </select>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
