--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,15 +7,15 @@
 <body>
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
+    <div th:if="${session.loginName != null}">
+        <p th:text="'안녕하세요. ' + ${session.loginName} +'님 ( ' + ${session.loginRole} + ' )'" style="text-align:right;color:#1b56b5">안녕하세요 손님.</p>
+    </div>
+    <div th:if="${session.loginName == null}">
+        <p style="text-align:right;color:#1b56b5">안녕하세요 손님.</p>
+    </div>
     <div class="jumbotron"> <h1>HELLO SHOP</h1>
-        <div th:if="${session.loginName != null}">
-            <p th:text="'안녕하세요. ' + ${session.loginName} +'님 ( ' + ${session.loginRole} + ' 권한 )'">안녕하세요 손님.</p>
-        </div>
-        <div th:if="${session.loginName == null}">
-            <p>안녕하세요 손님.</p>
-        </div>
         <p class="lead">회원 기능</p> <p>
-            <p style="color:red;">* 관리자는 hello shop을 통한 회원가입이 필요합니다.</p>
+            <p style="color:#cf2715;">* 관리자는 hello shop을 통한 회원가입이 필요합니다.</p>
             <a class="btn btn-lg btn-secondary" href="/member/new">회원 가입</a>
             <a class="btn btn-lg btn-secondary" href="/member/login">회원 로그인</a>
             <a class="btn btn-lg btn-secondary" style="background-color:green;" href="/oauth2/authorization/google">구글 로그인</a>
