--- a/src/main/resources/templates/member/loginMemberForm.html
+++ b/src/main/resources/templates/member/loginMemberForm.html
@@ -17,7 +17,7 @@
              th:class="${#fields.hasErrors('email')}? 'form-control fieldError' : 'form-control'"> </div>
     <div class="form-group">
       <label th:for="password">비밀번호</label>
-      <input type="text" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력하세요">
+      <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력하세요">
     </div>
 
     <button type="submit" class="btn btn-primary">Submit</button>
